[package]
name = "thermal"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.1"

tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] } # Check for the latest version
crossterm = "0.29.0" # Check for the latest version
textwrap = "0.16.2"
rusqlite = "0.36.0"
dirs = "6.0.0"
tempfile = "3.20.0"
[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
